# trap

./: .gitignore  README.md
include/trap/: trap.hpp
test/: CMakeLists.txt  conanfile.txt  main.cpp  test_catch2.cpp  test_trap.cpp
